[package]
name = "alloc_rs"
version = "0.1.0"
authors = ["Joshua Radin <jradn16@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
page_size = "0.4.2"
lazy_static = { version="1.4.0", features = ["spin_no_std"] }
libc = "0.2.70"
spin = "0.5.2"
memmap = "0.7.0"
